user module pages and routes added

--- a/src/app/modules/common/footer/footer.component.html
+++ b/src/app/modules/common/footer/footer.component.html
@@ -1,31 +1,36 @@
 <footer class="footer">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6 order-last order-md-first">
-          <div class="copyright text-center text-md-start">
-            <p class="text-sm">
-              Designed and Developed by
-              <a
-                href="https://plainadmin.com"
-                rel="nofollow"
-                target="_blank"
-              >
-                PlainAdmin
-              </a>
-            </p>
-          </div>
-        </div>
-        <!-- end col-->
-        <div class="col-md-6">
-          <div
-            class="terms d-flex justify-content-center justify-content-md-end"
-          >
-            <a href="#0" class="text-sm">Term & Conditions</a>
-            <a href="#0" class="text-sm ml-15">Privacy & Policy</a>
-          </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4 order-last order-md-first">
+        <div class="copyright text-center text-md-start">
+          <p class="text-sm text-white">
+            National Energy Conservation Award (NECA) 2020 <br />
+            Site best viewed in Mozilla Firefox, Chrome, Safari & IE edge
+          </p>
         </div>
       </div>
-      <!-- end row -->
+
+      <div class="col-md-4">
+        <div class="terms d-flex justify-content-center">
+          <a target="_blank" href="https://www.facebook.com/beeindiadigital/"><i class="lni lni-facebook-filled text-white p-2"></i></a>
+          
+        <a target="_blank" href="https://www.instagram.com/beeindiadigital/"><i class="lni lni-instagram text-white p-2"></i></a>
+         
+        <a target="_blank" href="https://twitter.com/beeindiadigital/"><i class="lni lni-twitter-filled text-white p-2"></i></a> 
+        <a target="_blank"><i class="lni lni-linkedin-original text-white p-2"></i></a> 
+          
+        <a target="_blank" href="https://www.youtube.com/bureauofenergyefficiency"><i class="lni lni-youtube text-white p-2"></i></a>
+        </div>
+      </div>
+      <!-- end col-->
+      <div class="col-md-4">
+        <div class="terms d-flex justify-content-center justify-content-md-end text-white">
+          Version 2.0.0 Build 20201103<br />
+          Developed and Maintained By UED
+        </div>
+      </div>
     </div>
-    <!-- end container -->
-  </footer>
+    <!-- end row -->
+  </div>
+  <!-- end container -->
+</footer>
