--- a/src/app/modules/common/navbar/navbar.component.html
+++ b/src/app/modules/common/navbar/navbar.component.html
@@ -1,1 +1,32 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg justify-content-end">
+  <!-- <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button> -->
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/about-us">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/notification">Sectors</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/press-release">Press Release</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/publication">Publication</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">User Manual</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/faqs">Faq</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"routerLink="/auth/login">Login</a>
+      </li>
+  
+    </ul>
+  </div>
+</nav>
