added admin modules

--- a/src/app/modules/common/navbar/navbar.component.html
+++ b/src/app/modules/common/navbar/navbar.component.html
@@ -18,7 +18,7 @@
         <a class="nav-link" routerLink="/publication">Publication</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">User Manual</a>
+        <a class="nav-link" href="https://www.bee-neca.in/web-assets/img/neca-user-manual.pdf" target="_blank">User Manual</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/faqs">Faq</a>
