--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -10,7 +10,7 @@
                   <div class="title text-center">
                     <h1 class="text-primary mb-10">Welcome Back</h1>
                     <p class="text-medium">
-                      Sign in to your Existing account to continue
+                      <!-- Sign in to your Existing account to continue -->
                     </p>
                   </div>
                   <div class="cover-image">
@@ -26,42 +26,46 @@
             <div class="col-lg-6">
               <div class="signin-wrapper">
                 <div class="form-wrapper">
-                  <h6 class="mb-15">Sign In Form</h6>
+                  <h6 class="mb-15">Login Form</h6>
                   <p class="text-sm mb-25">
                     Start creating the best possible user experience for you
                     customers.
                   </p>
-                  <form action="#">
+                  <form [formGroup]="loginFormGroup" id="loginForm">
                     <div class="row">
                       <div class="col-12">
                         <div class="input-style-1">
-                          <label>Email</label>
-                          <input type="email" placeholder="Email" />
+                          <label>User Id</label>
+                          <input 
+                          type="text" 
+                          placeholder="User Id" 
+                          formControlName="userId" 
+                          class="form-control"
+                          [ngClass]="{ 'is-invalid': submitted && f.userId.errors }" />
+
+                          <div *ngIf="submitted && f.userId.errors" class="invalid-feedback">
+                            <div *ngIf="f.userId.errors.required">User id is required</div>
+                          </div>
                         </div>
                       </div>
                       <!-- end col -->
                       <div class="col-12">
                         <div class="input-style-1">
                           <label>Password</label>
-                          <input type="password" placeholder="Password" />
+                          <input 
+                          type="password" 
+                          placeholder="Password" 
+                          formControlName="password"
+                          class="form-control"
+                          [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                            <div *ngIf="f.password.errors.required">Password is required</div>
+                          </div>
                         </div>
                       </div>
                       <!-- end col -->
                       <div class="col-xxl-6 col-lg-12 col-md-6">
-                        <div class="form-check checkbox-style mb-30">
-                          <input
-                            class="form-check-input"
-                            type="checkbox"
-                            value=""
-                            id="checkbox-remember"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="checkbox-remember"
-                          >
-                            Remember me next time</label
-                          >
-                        </div>
+                  
                       </div>
                       <!-- end col -->
                       <div class="col-xxl-6 col-lg-12 col-md-6">
@@ -74,12 +78,11 @@
                       <!-- end col -->
                       <div class="col-12">
                         <div
-                          class="button-group d-flex justify-content-center flex-wrap"
-                        >
+                          class="button-group d-flex justify-content-center flex-wrap">
                           <button
                             class="main-btn primary-btn btn-hover w-100 text-center"
-                          >
-                            Sign In
+                            (click)="onLoginFormSubmit()">
+                            Login
                           </button>
                         </div>
                       </div>
