--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,1 +1,8 @@
-<p>admin works!</p>
+  <!-- ======== main-wrapper start =========== -->
+  <main class="main-wrapper">
+   <app-sidenav></app-sidenav>   
+   <app-navbar></app-navbar>
+   <router-outlet></router-outlet>
+   <app-footer></app-footer>   
+  </main>
+  <!-- ======== main-wrapper end =========== -->
