--- a/src/app/modules/admin/sidenav/sidenav.component.html
+++ b/src/app/modules/admin/sidenav/sidenav.component.html
@@ -1,1 +1,194 @@
-<p>sidenav works!</p>
+ <!-- ======== sidebar-nav start =========== -->
+ <aside class="sidebar-nav-wrapper">
+    <div class="navbar-logo">
+      <a href="index.html">
+        <img src="assets/images/logo/logo.svg" alt="logo" />
+      </a>
+    </div>
+    <nav class="sidebar-nav">
+      <ul>
+        <li class="nav-item nav-item-has-children">
+          <a
+            href="#0"
+            data-bs-toggle="collapse"
+            data-bs-target="#ddmenu_1"
+            aria-controls="ddmenu_1"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon"><i class="lni lni-dashboard"></i></span>
+            <span class="text">Dashboard</span>
+          </a>
+          <ul id="ddmenu_1" class="collapse show dropdown-nav">
+            <li>
+              <a href="index.html" class="active">
+                <i class="lni lni-arrow-right"></i> e-Commerce
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item nav-item-has-children">
+          <a
+            href="#0"
+            class="collapsed"
+            data-bs-toggle="collapse"
+            data-bs-target="#ddmenu_2"
+            aria-controls="ddmenu_2"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon"><i class="lni lni-layout"></i></span>
+            <span class="text">Pages</span>
+          </a>
+          <ul id="ddmenu_2" class="collapse dropdown-nav">
+            <li>
+              <a href="settings.html">
+                <i class="lni lni-arrow-right"></i> Settings
+              </a>
+            </li>
+
+            <li>
+              <a href="blank-page.html">
+                <i class="lni lni-arrow-right"></i> Blank Page
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav-item">
+          <a href="invoice.html">
+            <span class="icon"><i class="lni lni-credit-cards"></i></span>
+            <span class="text">Invoice</span>
+          </a>
+        </li>
+
+        <li class="nav-item nav-item-has-children">
+          <a
+            href="#0"
+            class="collapsed"
+            data-bs-toggle="collapse"
+            data-bs-target="#ddmenu_3"
+            aria-controls="ddmenu_3"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon"><i class="lni lni-users"></i></span>
+            <span class="text">Auth</span>
+          </a>
+          <ul id="ddmenu_3" class="collapse dropdown-nav">
+            <li>
+              <a href="signin.html">
+                <i class="lni lni-arrow-right"></i> Sign In
+              </a>
+            </li>
+            <li>
+              <a href="signup.html">
+                <i class="lni lni-arrow-right"></i> Sign Up
+              </a>
+            </li>
+          </ul>
+        </li>
+        <span class="divider"><hr /></span>
+        <li class="nav-item nav-item-has-children">
+          <a
+            href="#0"
+            class="collapsed"
+            data-bs-toggle="collapse"
+            data-bs-target="#ddmenu_4"
+            aria-controls="ddmenu_4"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon"><i class="lni lni-layout"></i></span>
+            <span class="text">UI Elements </span>
+          </a>
+          <ul id="ddmenu_4" class="collapse dropdown-nav">
+            <li>
+              <a href="alerts.html">
+                <i class="lni lni-arrow-right"></i> Alerts
+              </a>
+            </li>
+            <li>
+              <a href="buttons.html">
+                <i class="lni lni-arrow-right"></i> Buttons
+              </a>
+            </li>
+            <li>
+              <a href="cards.html">
+                <i class="lni lni-arrow-right"></i> Cards
+              </a>
+            </li>
+
+            <li>
+              <a href="typography.html">
+                <i class="lni lni-arrow-right"></i> Typography
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item nav-item-has-children">
+          <a
+            href="#0"
+            class="collapsed"
+            data-bs-toggle="collapse"
+            data-bs-target="#ddmenu_55"
+            aria-controls="ddmenu_55"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon"><i class="lni lni-package"></i></span>
+            <span class="text">Icons</span>
+          </a>
+          <ul id="ddmenu_55" class="collapse dropdown-nav">
+            <li>
+              <a href="icons.html">
+                <i class="lni lni-arrow-right"></i> LineIcons
+              </a>
+            </li>
+            <li>
+              <a href="mdi-icons.html">
+                <i class="lni lni-arrow-right"></i> MDI Icons
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item nav-item-has-children">
+          <a
+            href="#0"
+            class="collapsed"
+            data-bs-toggle="collapse"
+            data-bs-target="#ddmenu_5"
+            aria-controls="ddmenu_5"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="icon"><i class="lni lni-check-box"></i></span>
+            <span class="text"> Forms </span>
+          </a>
+          <ul id="ddmenu_5" class="collapse dropdown-nav">
+            <li>
+              <a href="form-elements.html">
+                <i class="lni lni-arrow-right"></i> From Elements
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a href="tables.html">
+            <span class="icon"><i class="lni lni-grid-alt"></i></span>
+            <span class="text">Tables</span>
+          </a>
+        </li>
+        <span class="divider"><hr /></span>
+
+        <li class="nav-item">
+          <a href="notification.html">
+            <span class="icon"><i class="lni lni-alarm"></i></span>
+            <span class="text">Notifications</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </aside>
+  <div class="overlay"></div>
+  <!-- ======== sidebar-nav end =========== -->
