--- a/src/app/modules/admin/footer/footer.component.html
+++ b/src/app/modules/admin/footer/footer.component.html
@@ -5,24 +5,17 @@
         <div class="col-md-6 order-last order-md-first">
           <div class="copyright text-center text-md-start">
             <p class="text-sm">
-              Designed and Developed by
-              <a
-                href="https://plainadmin.com"
-                rel="nofollow"
-                target="_blank"
-              >
-                PlainAdmin
-              </a>
+              National Energy Conservation Award (NECA) 2020 <br>                                
+              Site best viewed in Mozilla Firefox, Chrome, Safari & IE edge
             </p>
           </div>
         </div>
         <!-- end col-->
         <div class="col-md-6">
           <div
-            class="terms d-flex justify-content-center justify-content-md-end"
-          >
-            <a href="#0" class="text-sm">Term & Conditions</a>
-            <a href="#0" class="text-sm ml-15">Privacy & Policy</a>
+            class="terms d-flex justify-content-center justify-content-md-end">
+            Version 2.0.0 Build 20201103 <br>                       
+            Developed and Maintained By UED
           </div>
         </div>
       </div>
