--- a/src/app/modules/admin/sidenav/sidenav.component.html
+++ b/src/app/modules/admin/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
  <aside class="sidebar-nav-wrapper">
     <div class="navbar-logo">
       <a href="index.html">
-        <img src="assets/images/logo/logo.svg" alt="logo" />
+        <img src="assets/images/logo/govt.png" alt="logo" />
       </a>
     </div>
     <nav class="sidebar-nav">
