--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1435,7 +1435,7 @@ h6,
 
 /* ========== header css ========== */
 .header {
-  padding: 30px 0;
+  padding: 15px 0;
   background: #fff; }
   .header .header-left .menu-toggle-btn .main-btn {
     padding: 0px 15px;
@@ -1705,7 +1705,7 @@ h6,
 .signin-wrapper {
   background: #fff;
   padding: 60px;
-  min-height: 600px;
+  min-height:100vh;
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -1980,7 +1980,7 @@ h6,
   padding: 20px 0px;
   height: 100vh;
   position: fixed;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   top: 0;
   left: 0;
@@ -2173,11 +2173,13 @@ h6,
         padding-left: 20px;
         padding-right: 20px; } }
   .main-wrapper .footer {
-    padding: 25px 0;
+    padding: 15px 0;
     justify-items: flex-end;
     position: absolute;
     bottom: 0;
-    width: 100%; }
+    width: 100%;
+    background:#fff  
+  }
     .main-wrapper .footer .copyright p a {
       color: inherit; }
       .main-wrapper .footer .copyright p a:hover {
