--- a/src/app/modules/admin/sidenav/sidenav.component.html
+++ b/src/app/modules/admin/sidenav/sidenav.component.html
@@ -7,52 +7,23 @@
     </div>
     <nav class="sidebar-nav">
       <ul>
-        <li class="nav-item nav-item-has-children">
-          <a
-            href="#0"
-            data-bs-toggle="collapse"
-            data-bs-target="#ddmenu_1"
-            aria-controls="ddmenu_1"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+        <li class="nav-item">
+          <a>
             <span class="icon"><i class="lni lni-dashboard"></i></span>
             <span class="text">Dashboard</span>
-          </a>
-          <ul id="ddmenu_1" class="collapse show dropdown-nav">
-            <li>
-              <a href="index.html" class="active">
-                <i class="lni lni-arrow-right"></i> e-Commerce
-              </a>
-            </li>
-          </ul>
+          </a>         
         </li>
-        <li class="nav-item nav-item-has-children">
-          <a
-            href="#0"
-            class="collapsed"
-            data-bs-toggle="collapse"
-            data-bs-target="#ddmenu_2"
-            aria-controls="ddmenu_2"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="icon"><i class="lni lni-layout"></i></span>
-            <span class="text">Pages</span>
-          </a>
-          <ul id="ddmenu_2" class="collapse dropdown-nav">
-            <li>
-              <a href="settings.html">
-                <i class="lni lni-arrow-right"></i> Settings
-              </a>
-            </li>
-
-            <li>
-              <a href="blank-page.html">
-                <i class="lni lni-arrow-right"></i> Blank Page
-              </a>
-            </li>
-          </ul>
+        <li class="nav-item">
+          <a>
+            <span class="icon"><i class="lni lni-inbox"></i></span>
+            <span class="text">Inbox</span>
+          </a>         
+        </li>
+        <li class="nav-item">
+          <a>
+            <span class="icon"><i class="lni lni-lock-alt"></i></span>
+            <span class="text">Withheld</span>
+          </a>         
         </li>
 
         <li class="nav-item">
