--- a/src/app/modules/admin/sidenav/sidenav.component.html
+++ b/src/app/modules/admin/sidenav/sidenav.component.html
@@ -28,36 +28,30 @@
 
         <li class="nav-item">
           <a href="invoice.html">
-            <span class="icon"><i class="lni lni-credit-cards"></i></span>
-            <span class="text">Invoice</span>
+            <span class="icon"><i class="lni lni-protection"></i></span>
+            <span class="text">Approved Form</span>
           </a>
         </li>
 
-        <li class="nav-item nav-item-has-children">
-          <a
-            href="#0"
-            class="collapsed"
-            data-bs-toggle="collapse"
-            data-bs-target="#ddmenu_3"
-            aria-controls="ddmenu_3"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="icon"><i class="lni lni-users"></i></span>
-            <span class="text">Auth</span>
+        <li class="nav-item">
+          <a href="invoice.html">
+            <span class="icon"><i class="lni lni-exit"></i></span>
+            <span class="text">Returned</span>
           </a>
-          <ul id="ddmenu_3" class="collapse dropdown-nav">
-            <li>
-              <a href="signin.html">
-                <i class="lni lni-arrow-right"></i> Sign In
-              </a>
-            </li>
-            <li>
-              <a href="signup.html">
-                <i class="lni lni-arrow-right"></i> Sign Up
-              </a>
-            </li>
-          </ul>
+        </li>
+
+        <li class="nav-item">
+          <a href="invoice.html">
+            <span class="icon"><i class="lni lni-archive"></i></span>
+            <span class="text">Archive</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="invoice.html">
+            <span class="icon"><i class="lni lni-cog"></i></span>
+            <span class="text">Manage Phase</span>
+          </a>
         </li>
         <span class="divider"><hr /></span>
         <li class="nav-item nav-item-has-children">
@@ -70,31 +64,21 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="icon"><i class="lni lni-layout"></i></span>
-            <span class="text">UI Elements </span>
+            <span class="icon"><i class="lni lni-user"></i></span>
+            <span class="text">Manage User</span>
           </a>
           <ul id="ddmenu_4" class="collapse dropdown-nav">
             <li>
               <a href="alerts.html">
-                <i class="lni lni-arrow-right"></i> Alerts
+                <i class="lni lni-apartment"></i> Agency
               </a>
             </li>
             <li>
               <a href="buttons.html">
-                <i class="lni lni-arrow-right"></i> Buttons
+                <i class="lni lni-apartment"></i> Participants
               </a>
             </li>
-            <li>
-              <a href="cards.html">
-                <i class="lni lni-arrow-right"></i> Cards
-              </a>
-            </li>
-
-            <li>
-              <a href="typography.html">
-                <i class="lni lni-arrow-right"></i> Typography
-              </a>
-            </li>
+           
           </ul>
         </li>
         <li class="nav-item nav-item-has-children">
@@ -107,57 +91,23 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="icon"><i class="lni lni-package"></i></span>
-            <span class="text">Icons</span>
+            <span class="icon"><i class="lni lni-control-panel"></i></span>
+            <span class="text">Manage Content</span>
           </a>
           <ul id="ddmenu_55" class="collapse dropdown-nav">
             <li>
               <a href="icons.html">
-                <i class="lni lni-arrow-right"></i> LineIcons
+                <i class="lni lni-add-files"></i> About Us
               </a>
             </li>
             <li>
               <a href="mdi-icons.html">
-                <i class="lni lni-arrow-right"></i> MDI Icons
+                <i class="lni lni-add-files"></i> Notification
               </a>
             </li>
           </ul>
         </li>
-        <li class="nav-item nav-item-has-children">
-          <a
-            href="#0"
-            class="collapsed"
-            data-bs-toggle="collapse"
-            data-bs-target="#ddmenu_5"
-            aria-controls="ddmenu_5"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="icon"><i class="lni lni-check-box"></i></span>
-            <span class="text"> Forms </span>
-          </a>
-          <ul id="ddmenu_5" class="collapse dropdown-nav">
-            <li>
-              <a href="form-elements.html">
-                <i class="lni lni-arrow-right"></i> From Elements
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a href="tables.html">
-            <span class="icon"><i class="lni lni-grid-alt"></i></span>
-            <span class="text">Tables</span>
-          </a>
-        </li>
-        <span class="divider"><hr /></span>
-
-        <li class="nav-item">
-          <a href="notification.html">
-            <span class="icon"><i class="lni lni-alarm"></i></span>
-            <span class="text">Notifications</span>
-          </a>
-        </li>
+      
       </ul>
     </nav>
   </aside>
