added alert message

--- a/src/app/modules/shared/paging/paging.component.html
+++ b/src/app/modules/shared/paging/paging.component.html
@@ -18,3 +18,8 @@
       </li>
     </ul>
   </nav>
+
+  <!-- <pagination [boundaryLinks]="true" [totalItems]="77"
+            previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+ 
+</pagination> -->
