--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -31,6 +31,9 @@
                 <thead>
                   <tr>
                     <th>
+                      <h6 class="text-sm text-medium">S No</h6>
+                    </th>
+                    <th>
                       <h6 class="text-sm text-medium">Avatar</h6>
                     </th>
                     <th class="min-width">
@@ -57,6 +60,9 @@
                 </thead>
                 <tbody>
                   <tr *ngFor="let data of samplatList.data">
+                    <td>
+                      <p class="text-sm">{{data.id}}</p>
+                    </td>
                     <td>
                       <div class="image">
                         
@@ -104,7 +110,16 @@
                 </tbody>
               </table>
               <!-- End Table -->
-              <app-paging [TotalPage]="samplatList.total_pages"></app-paging>
+              <div class="text-right">
+                <hr>
+                <pagination 
+                class="float-end"
+                [totalItems]="samplatList.total"
+                (pageChanged)="pageChanged($event)"
+                previousText="&lsaquo;" 
+                nextText="&rsaquo;"></pagination>
+              </div>                           
+               <!-- <app-paging [TotalPage]="samplatList.total_pages"></app-paging> -->
             </div>
           </div>
         </div>
