--- a/src/app/modules/shared/alert-message/alert-message.component.html
+++ b/src/app/modules/shared/alert-message/alert-message.component.html
@@ -1,6 +1,21 @@
-<div *ngFor="let alert of alerts">
-    <alert 
-    [type]="alert.type" 
-    [dismissible]="dismissible" 
-    (onClosed)="onClosed(alert)">{{ alert.msg }}</alert>
+<div *ngFor="let alert of alerts" class="alert-container {{cssClass(alert)}} slide-left">
+ 
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <ng-container [ngSwitch]="alert.type">
+        <i *ngSwitchCase="0" class="lni lni-checkmark-circle"> &nbsp; </i>
+        <i *ngSwitchCase="1" class="lni lni-cross-circle"> &nbsp; </i>
+        <i *ngSwitchCase="2" class="lni lni-information"> &nbsp; </i>
+        <i *ngSwitchCase="3" class="lni lni-warning"> &nbsp; </i>
+      </ng-container>
+     
+      <span [innerHTML]="alert.message"></span>
+    </div>
+    <div class="col-2">
+      <span class="close" (click)="removeAlert(alert)">&times;</span>
+    </div>
   </div>
+ 
+  
+</div>
+
